Cleaning up warnings and adding ACPI parameter support

--- a/exe/ectest_app.vcxproj
+++ b/exe/ectest_app.vcxproj
@@ -89,7 +89,8 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Link>
-      <AdditionalDependencies>%(AdditionalDependencies);mincore.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories);..\lib\$(platform)\Release</AdditionalLibraryDirectories>
+      <AdditionalDependencies>%(AdditionalDependencies);mincore.lib;eclib.lib</AdditionalDependencies>
     </Link>
     <ResourceCompile>
       <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories);$(DDK_INC_PATH);$(SDK_INC_PATH)</AdditionalIncludeDirectories>
