--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -16,6 +16,10 @@ color-eyre = "0.6.3"
 strum = { version = "0.27", default-features = false, features = ["derive"] }
 log = "0.4"
 env_logger = "0.10"
+tui-input = "0.14.0"
+
+[features]
+mock = []
 
 [lints.clippy]
 suspicious = "forbid"
