--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -17,6 +17,7 @@ strum = { version = "0.27", default-features = false, features = ["derive"] }
 log = "0.4"
 env_logger = "0.10"
 tui-input = "0.14.0"
+uuid = { version = "1.17.0", default-features = false }
 
 [features]
 mock = []
