--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -20,6 +20,7 @@ tui-input = "0.14.0"
 uuid = { version = "1.17.0", default-features = false }
 
 [features]
+default = ["mock"]
 mock = []
 
 [lints.clippy]
